--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SULOG</title>
+    <title>SELF_LOG</title>
     <link rel="dns-prefetch" href="//picsum.photos" />
     <link rel="dns-prefetch" href="//res.cloudinary.com" />
     <link rel="preconnect" href="https://picsum.photos" crossorigin />
